assets/css/style.css
/* ... */
.label {
  width: 80px;
  height: 40px;
  background-color: rgba(0, 0, 0, 0.25);
  border: 1px solid rgba(255, 255, 255, 0.2);
  display: flex;
  border-radius: 50px;
  align-items: center;
  justify-content: space-between;
  padding: 5px;
  position: relative;
  transform: scale(1);
  transition: background-color 0.3s ease;
}

.ball {
  width: 30px;
  height: 30px;
  background-color: #fff;
  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
  position: absolute;
  top: 4px;
  left: 5px;
  border-radius: 50%;
  transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55);
}

.checkbox:checked + .label .ball {
  transform: translateX(35px);
}

.checkbox:checked + .label {
  background-color: #4a90e2;
}

.celcius {
  color: white;
  font-size: 15px;
  padding-left: 10px;
  transition: color 0.3s ease;
}

.farenheit {
  color: white;
  font-size: 15px;
}

.checkbox:checked + .label .celcius {
  color: #fff;
  font-weight: bold;
}

.checkbox:not(:checked) + .label .farenheit {
  color: #fff;
  font-weight: bold;
}

.link1 {
  padding: 0.5rem 0.5rem;
  box-sizing: border-box;
  margin-right: 50px;
  color: #ffffff;
  transition-property: scale();
  transition-duration: 0.5s;
}
.link1:hover {
  transform: scale(1.2, 1.2);
  transition-timing-function: linear;
  color: #ffffff;
}
.link2 {
  font-weight: 900;
  padding: 0.5rem 0.5rem;
  box-sizing: border-box;
  transition-property: scale();
  transition-duration: 0.5s;
}
.link2:hover {
  transform: scale(1.2, 1.2);
  transition-timing-function: linear;
}
.link3 {
  padding: 0.5rem 0.5rem;
  box-sizing: border-box;
  margin-left: 50px;
  color: #d62976;
  transition-property: scale();
  transition-duration: 0.5s;
}
.link3:hover {
  transform: scale(1.2, 1.2);
  transition-timing-function: linear;
  color: #d62976;
}
.link4 {
  padding: 0.5rem 0.5rem;
  box-sizing: border-box;
  margin-left: 50px;
  color: #ffffff;
  transition-property: scale();
  transition-duration: 0.5s;
}
.link4:hover {
  transform: scale(1.2, 1.2);
  transition-timing-function: linear;
  color: #ffffff;
}

.textfooter {
  color: white;
  text-align: center;
  font-size: x-large;
  z-index: auto;
}

footer {
  background-color: #000000d0;
  margin-top: 55px;
  height: 150px;
}

.footer-component {
  width: 100%;
}

/* current day in future weather forecast*/
.forecast-component__item-current-day {
  background-color: rgb(9, 32, 63, 0.75);
  backdrop-filter: blur(16px) saturate(180%);
  -webkit-backdrop-filter: blur(16px) saturate(180%);
}

@media only screen and (max-width: 576px) {
  .forecast-component__items-wrapper {
    grid-template-columns: auto auto;
  }

  .weather-component__card {
    padding: 7px;
    height: 460px;
  }

  .weather-component {
    padding: 10px;
  }
}

footer {
  text-decoration-color: white;
  text-emphasis-style: bold;
  background-color: rgb(9, 32, 63, 0.6);
  margin: 3rem auto;
}

.link {
  width: 50px;
  border-radius: 50%;
  background-color: #fff;
  border: none;
  outline: none;
  transition: 0.5s;
}

.link:hover {
  transform: translateY(-6px) scale(1.1);
}

/* scroll btn css */
/* resolved css conflicts */
html {
  scroll-behavior: unset !important;
}

html body #scroll-btn {
  opacity: 0;
  width: 40px;
  height: 40px;
  color: #fff;
  background-color: deepskyblue;
  position: fixed;
  bottom: 20%;
  right: 10%;
  border: 2px solid #fff;
  border-radius: 50%;
  font: bold 20px monospace;
  transition: opacity 0.5s, transform 0.5s;
}

#scroll-btn.show {
  opacity: 1;
  transition: opacity 1s, transform 1s;
}

@media only screen and (max-width: 550px) {
  .footer-component__social-media {
    width: 100%;
  }

  .link {
    width: 45%;
  }

  .weather-component__city-name {
    font-size: 1.5rem;
  }

  .weather-component__city-temperature {
    font-size: 1.5rem;
  }

  .weather-component__AQI {
    flex-direction: column;
  }
}

#background {
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: 50% 50%;
  overflow-y: scroll;
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  filter: blur(3px);
  z-index: -1;
}

#background::after {
  content: "";
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  background-color: rgba(0, 0, 0, 0.25);
}
.air-quality-label {
  margin: auto 5px;
  padding: 1px 5px;
}
.good-quality {
  background-color: #009966;
  border-radius: 32px;
  text-align: center;
  color: white;
}

.satisfactory-quality {
  background-color: #ffde33;
  border-radius: 32px;
  color: #111;
}

.sensitive-quality {
  border-radius: 32px;
  text-align: center;
  color: white;
  background-color: rgb(255, 102, 0);
}

.unhealthy-quality {
  border-radius: 32px;
  text-align: center;
  color: white;
  background-color: #cc0033;
}

.very-unhealthy-quality {
  border-radius: 32px;
  text-align: center;
  color: white;
  background-color:#550a55;
}

.hazardous-quality {
  background-color: #7e0023;
  border-radius: 32px;
  text-align: center;
  color: white;
}

.not-available {
  background-color: gray;
  border-radius: 32px;
  text-align: center;
  color: white;
}

.whatsapp img {
  width: 90px;
  /* margin-left: -2.2rem; */
  /* margin-top: 2rem; */
  cursor: pointer;
  /* position: fixed; */
}

.scroll-top {
  position: absolute;
  z-index: 5;
  top: 0;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: #fff;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  -webkit-box-shadow: 0 0px 10px 0px rgba(0, 0, 0, 0.1);
  box-shadow: 0 0px 10px 0px rgba(0, 0, 0, 0.1);
}

.scroll-top > span {
    position: absolute;
    font-size: 2rem;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    color: #000 !important;
}

.data-value {
  font-weight: bold;
}
/* ... */

